[toolbars-new] fix: modals style / add alignment tooltip (#2915)
* [toolbars-new] fix: modals style

* fix-buttons-font-wiring/modals border-radius

* update changelog file

* add alignments tooltip

* Trigger notification

* refactor tooltip keys

* update changelog file

* update changelog file

--- a/packages/toolbars-new/web/src/Toolbar/ToolbarNew.scss
+++ b/packages/toolbars-new/web/src/Toolbar/ToolbarNew.scss
@@ -34,6 +34,7 @@
     .modal {
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.06);
         border: solid 1px rgba(51, 51, 51, 0.1);
+        border-radius: 2px;
         background-color: #ffffff;
         display: flex;
         flex-direction: column;
