--- a/packages/toolbars-new/web/src/modals/panels/styles.scss
+++ b/packages/toolbars-new/web/src/modals/panels/styles.scss
@@ -125,6 +125,7 @@
 .panel_Container {
   border: solid 1px #ededed;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 0 4px 0 rgba(0, 0, 0, 0.1);
+  border-radius: inherit;
   svg {
     height: unset;
     width: unset;
